Fix flaky tests dependent on order